clusters/home/apps/freshrss/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  selector:
    app: freshrss
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  annotations:
      kubernetes.io/ingress.class: nginx
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: RSS Reader
      gethomepage.dev/group: Apps/Services
      gethomepage.dev/icon: freshrss
      gethomepage.dev/name: Fresh RSS
  labels:
    name: freshrss
spec:
  rules:
  - host: rss.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: freshrss
            port: 
              number: 80
